syntax = "proto3";
option go_package = "github.com/victormemborg/Consensus/grpc";

service Node {
    rpc InformArrival (NodeInfo) returns (Empty);
    rpc RequestVote (Request) returns (Reply);
    rpc RequestAccess (Request) returns (Reply);
}

message NodeInfo {
    int32 id = 1;
    string address = 2;
}

message Request {
    int32 sender = 1;
    int32 term = 2;
}

message Reply {
    bool granted = 1;
}

message Empty {}